--- a/src/containers/main/Main.css
+++ b/src/containers/main/Main.css
@@ -1,5 +1,18 @@
 main {
     padding: 2rem 0;
+    width: 100%;
+}
+
+.main-top-bar {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.main-top-bar::after {
+    content: "";
+    width: 10rem;
+    background-color: green;
 }
 
 .toggle-create-bike {
@@ -8,7 +21,6 @@ main {
     border-radius: 2px;
     cursor: pointer;
 }
-
 
 .toggle-create-bike:hover {
     background-color: rgb(130, 216, 130);
@@ -20,4 +32,16 @@ main {
 
 .hide-form:hover {
     background-color: rgb(229, 157, 157);
+}
+
+.search-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 1rem;
+}
+
+.right-bar-filler {
+    width: 20%;
+    height: 1rem;
 }
