--- a/src/containers/header/Header.css
+++ b/src/containers/header/Header.css
@@ -1,4 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap');
+
+
 header {
-    height: 5rem;
-    box-shadow: 0px 2px 3px #a7a7a785
+    background-color: rgb(247, 247, 247);
+    box-shadow: 0px 2px 3px #a7a7a785;
+    padding-top: 1rem;
+    padding-bottom: 1.5rem;
+    padding-left: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: Dosis;
+}
+
+#logo {
+    margin-left: 2rem;
+    margin-bottom: 0.5rem;
+}
+
+#logo > img {
+    height: 60px;
+}
+
+nav {
+    margin-right: 2rem;
+}
+
+nav > a {
+    margin: 1rem;
+    color: inherit;
+    text-decoration: none;
+}
+
+#title {
+    padding: 1rem;
+    font-size: larger;
+}
+
+.header-style {
+    margin: 0.5rem;
+    width: 100%;
+    color: green;
 }
