--- a/src/containers/header/Header.css
+++ b/src/containers/header/Header.css
@@ -2,6 +2,7 @@
 
 
 header {
+    font-family: Dosis;
     background-color: rgb(247, 247, 247);
     box-shadow: 0px 2px 3px #a7a7a785;
     padding-top: 1rem;
@@ -10,7 +11,8 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-family: Dosis;
+    position: sticky;
+    top: 0;
 }
 
 #logo {
