--- a/src/components/bikeCard/BikeCard.css
+++ b/src/components/bikeCard/BikeCard.css
@@ -4,7 +4,8 @@
     justify-content: space-between;
     margin: 1rem;
     padding: 1rem;
-    box-shadow: 2px 2px 3px rgb(192, 192, 192, 0.21)
+    box-shadow: 2px 2px 3px rgb(192, 192, 192, 0.21);
+    cursor: pointer;
 }
 
 .bike-card > img {
